fix: melhorar visibilidade do botão

--- a/components/DarkModeToggle/styles.module.css
+++ b/components/DarkModeToggle/styles.module.css
@@ -18,5 +18,5 @@
 }
 
 .active {
-  background: var(--color-bg-dark);
+  background: var(--color-border);
 }
